Реализована ручка отправления заявки в друзья
